// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButtonField should render checkbox item 1`] = `
<FormikConnect(FieldInner)
  name="Checkbox field"
  render={[Function]}
/>
`;

exports[`TextButtonField should render select item with custom blank opt 1`] = `
<FormikConnect(FieldInner)
  name="select field"
  render={[Function]}
/>
`;

exports[`TextButtonField should render text field without field selector 1`] = `
<FormikConnect(FieldInner)
  name="no selector"
  render={[Function]}
/>
`;

exports[`TextButtonField should render text item 1`] = `
<FormikConnect(FieldInner)
  name="Text field"
  render={[Function]}
/>
`;
